# unotify

./: .gitignore  COMMANDS.txt  README.md  example.py  pyproject.toml  setup.py
unotify/: core.py
unotify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
